src/test/deca/context/invalid/sansObj/not-unaire-string.deca
// Description:
//          Utilisation du not unaire sur un string
//
// Résultat:
//L'opérateur Not doit être utilisé sur un booléen
//
{
    if (!"non-booléen"){}
}